# ggcraft

./: Cargo.toml  Makefile  index.html
.github/workflows/: deploy.yaml
assets/shaders/: block.wgsl
src/: lib.rs  main.rs
src/engine/: app.rs  atlas.rs  cam.rs  cross.rs  mod.rs  model.rs  pipe.rs  state.rs  texture.rs  uniform.rs  watcher.rs  world.rs
src/engine/mca/: reader.rs
src/generate_enum/: Cargo.toml
src/generate_enum/src/: lib.rs
src/shaders/: block.wgsl  cross.wgsl
