[package]
name = "anti"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.24.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
nalgebra = "0.34.1"
notify = "8.2.0"
derive_more = {version = "2.1.1", features = ["deref"] }
 
 