[package]
name = "ggcraft"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 3
# overflow-checks = false
# lto = "thin

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu_text = "29.0.0"
image = "0.25.10"
bytemuck = { version = "1.24.0", features = ["derive"] }
rustc-hash = "2.1.1"
nalgebra = "0.34.2"
derive_more = { version = "2.1.1", features = ["deref"] }
generate_enum = { path = "src/generate_enum" }

# optional
notify = { version = "8.2.0", optional = true }
fastanvil = { version = "0.32.0", optional = true }
serde = { version = "1.0.228", optional = true }
fastnbt = { version = "2.6.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "29.0"
winit = "0.30"
instant = "0.1.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Response"] }
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.8", features = ["getrandom"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
js-sys = "0.3.92"
futures = "0.3.32"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["hot-reload", "hermit", "msaa"]
hermit = ["fastanvil", "serde", "fastnbt"]
msaa = []
hot-reload = ["notify"]
